<resources>
    <string name="app_name">CarHome</string>
    <string name="app_carhome" translatable="false">CarHome</string>
    <string name="car_home">Car Home</string>
    <string name="bugsee_token" translatable="false">268187b3-f3b4-4b29-a07d-92ef6f4a9d18</string>
    <string name="phone_rooted">Your phone is rooted, the application will close!</string>
    <string name="int_not_connect">You don\'t have an active internet connection</string>
    <string name="general_server_error">Server error</string>
    <string name="server_saving_error">Error! Please check the info you submitted and retry</string>
    <string name="dlUpload_success">Driving License uploaded successfully!</string>
    <string name="idUpload_success">Identity Document uploaded successfully!</string>
    <string name="logo_success_msg">Logo changed successfully!</string>
    <string name="date_hint">DD / MM / YYYY</string>
    <string name="days_template">%d Days</string>
    <string name="hours_template">%d Hours</string>
    <string name="minutes_template">%d Min</string>
    <string name="duetime_in_future">%s left</string>
    <string name="duetime_in_past">%s past</string>
    <string name="progress">%d\%% Finished</string>
    <string name="onb_skip">Skip</string>
    <string name="onb_title1">Get Real-Time \n Updates On All Your \n Cars</string>
    <string name="onb_title2">Manage Your \n Insurances and Taxes \n In A Single Place</string>
    <string name="onb_title3">Never Miss Anything \n With Our Smart \n Reminders</string>
    <string name="onb_get_started">Get Started</string>
    <string name="auth_welcome">Welcome back to</string>
    <string name="email_hint">Email</string>
    <string name="email_hint_cc"><![CDATA[Email</><font color="#FB4079">*</font>]]></string>
    <string name="password_hint">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="login_with">Or login with</string>
    <string name="sign_up_with">Or sign up with</string>
    <string name="terms_services">Terms of Services</string>
    <string name="switch_to_signup">Don\'t have an account? Sign up</string>
    <string name="switch_to_login">Already have an account? Login</string>
    <string name="err_user_null">Error! User is null</string>
    <string name="user_retrieval_failed">Error! User retrieval failed</string>
    <string name="email_required">Please fill in your e-mail address to continue</string>
    <string name="pass_required">Please fill in your password to continue</string>
    <string name="pass_different">The password does not match the value in the confirmation field</string>
    <string name="login_failed">Login failed</string>
    <string name="signup_failed">Signup failed</string>
    <string name="g_login_failed">Google Login failed</string>
    <string name="f_login_failed">Facebook Login failed</string>
    <string name="failed_server">Authentication failed with server error</string>
    <string name="terms_tos">Terms &amp; Services</string>
    <string name="terms_gdpr">GDPR</string>
    <string name="forgotpass_des">Enter your registered email or phone number below to receive password reset instructions</string>
    <string name="rem_pass">Remember Password? Login</string>
    <string name="forgotpass_login">Login</string>
    <string name="reset_failed">Resetting password failed</string>
    <string name="back_to_login">Back to login</string>
    <string name="resetpass">Reset your password</string>
    <string name="resetpass_email">Use your email address to verify and \n start enjoying Carhome services</string>
    <string name="goto_email">Go to Mail to Verify</string>
    <string name="receive_no_link">Didn\’t receive the link?</string>
    <string name="resend">Resend</string>
    <string name="english">English</string>
    <string name="english_lan" translatable="false">en-US</string>
    <string name="romania">România</string>
    <string name="romanian">Romanian</string>
    <string name="romania_lan" translatable="false">en-RO</string>
    <string name="profile">Profile</string>
    <string name="delete_act">Delete Account</string>
    <string name="step_profile">You have completed %d/%d Steps</string>
    <string name="pay_methods">Payment Methods</string>
    <string name="security">Security</string>
    <string name="history">History</string>
    <string name="data">Data</string>
    <string name="notifications">Notifications</string>
    <string name="documents">Documents</string>
    <string name="aboutus">About Us</string>
    <string name="change_lang">Change Language</string>
    <string name="faq">FAQs/ Help</string>
    <string name="t_c">Terms and conditions</string>
    <string name="gdpr_title">GDPR</string>
    <string name="socials">Socials</string>
    <string name="share_app">Share the app</string>
    <string name="settings_invite">Invite</string>
    <string name="purchases">My Purchases</string>
    <string name="make_purchases">Make a purchases</string>
    <string name="title_purchases">Lorem Ipsum dolor sit amet</string>
    <string name="contact_us">Contact Us</string>
    <string name="select_method">Select Payment Method</string>
    <string name="reason">Reason/ Issue</string>
    <string name="subreason">Sub Reason/ Issue  </string>
    <string name="message">Message</string>
    <string name="submit_success_msg">Submitted successfully!</string>
    <string name="size_msg">File size exceed to limit of 10 MB</string>
    <string name="type_here">Type here…</string>
    <string name="attach">Attach Screenshot/Image</string>
    <string name="submit">Submit</string>
    <string name="allow_permission">Allow permission for storage access!</string>
    <string name="attachment_max_msg">Maximum 5 attachments are allowed !</string>
    <string name="msg_min_msg">Message should have at least 10 characters</string>
    <string name="msg_max_msg">Message exceed limit of 5000 characters</string>
    <string name="change_pin">Change PIN</string>
    <string name="change_pin_title">Lorem Ipsum dolor sit amet</string>
    <string name="change_pswd">Change Password</string>
    <string name="change_pswd_title">Lorem Ipsum dolor sit amet</string>
    <string name="enable_biometric">Enable Biometric</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="biometric_title">Lorem Ipsum dolor sit amet</string>
    <string name="bio_device_fail">Device doesn\'t support fingerprint authentication !</string>
    <string name="bio_enroll_fail">User hasn\'t enrolled any fingerprints to authenticate with !</string>
    <string name="bio_enable">Biometrics enable !</string>
    <string name="bio_disable">Biometrics disable !</string>
    <string name="change_faceid">Change Face ID</string>
    <string name="change_faceid_title">Lorem Ipsum dolor sit amet</string>
    <string name="current_pswd">Current Password</string>
    <string name="new_pswd">New Password</string>
    <string name="confirm_new_pswd">Confirm New Password</string>
    <string name="remember_hint">Don\'t remember current password?</string>
    <string name="Reset_via_email"><u>Reset using email</u></string>
    <string name="pswd_success1">Password \n Changed Successfully</string>
    <string name="pswd_success2">Please check your inbox and click in the \n received link to reset a password</string>
    <string name="incorrect_attempt">5 incorrect attempts to verify fingerprints. \n Try again in %d seconds</string>
    <string name="retry">Biometric requires to open this app.</string>
    <string name="try_again1">Try again</string>
    <string name="close1">Close App</string>
    <string name="close">Close</string>
    <string name="first_name_c">First Name<font color='#FB4079'>*</font></string>
    <string name="first_name_cc"><![CDATA[First Name</><font color="#FB4079">*</font>]]></string>
    <string name="first_name">First Name</string>
    <string name="last_name_c">Last Name<font color='#FB4079'>*</font></string>
    <string name="last_name_cc"><![CDATA[Last Name</><font color="#FB4079">*</font>]]></string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="address">Address</string>
    <string name="address_number">Number<font color='#FB4079'>*</font></string>
    <string name="address_number_cc"><![CDATA[Number</><font color="#FB4079">*</font>]]></string>
    <string name="address_street_name">Street Name</string>
    <string name="address_street_name_cc"><![CDATA[Street Name</><font color="#FB4079">*</font>]]></string>
    <string name="block">Block</string>
    <string name="block_cc"><![CDATA[Block</><font color="#FB4079">*</font>]]></string>
    <string name="entrance">Entrance</string>
    <string name="entrance_cc"><![CDATA[Entrance</><font color="#FB4079">*</font>]]></string>
    <string name="floor">Floor</string>
    <string name="floor_cc"><![CDATA[Floor</><font color="#FB4079">*</font>]]></string>
    <string name="apartment">Apartment</string>
    <string name="apartment_cc"><![CDATA[Apartment</><font color="#FB4079">*</font>]]></string>
    <string name="address_city_c">City<font color='#FB4079'>*</font></string>
    <string name="address_city_cc"><![CDATA[City</><font color="#FB4079">*</font>]]></string>
    <string name="address_city">City</string>
    <string name="address_county_c">County<font color='#FB4079'>*</font></string>
    <string name="address_county_cc"><![CDATA[County</><font color="#FB4079">*</font>]]></string>
    <string name="address_county">County</string>
    <string name="address_zipcode">Zipcode</string>
    <string name="id_type">ID Type</string>
    <string name="id_type_cc"><![CDATA[ID Type</><font color="#FB4079">*</font>]]></string>
    <string name="select_idtype">Select your id type</string>
    <string name="profile_series">Series</string>
    <string name="profile_series_cc"><![CDATA[Series</><font color="#FB4079">*</font>]]></string>
    <string name="profile_number">Number</string>
    <string name="go_back">Go Back</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="new_car_error">Oops! We are unable to\nfetch your car details</string>
    <string name="new_car_error_title">We are not able to fetch your data using given VIN Number. Please try to validate your entry or go ahead with Manual entry.</string>
    <string name="add_car_manually">Add Car Details Manually</string>
    <string name="car_try_again">Try again with different VIN</string>
    <string name="maps">Maps</string>
    <string name="to_find_places">• To help you find great places</string>
    <string name="give_you_locations">• Give you real-time information based on your \n \u00A0 locations</string>
    <string name="need_location">We need you location…</string>
    <string name="location_required">Location Required</string>
    <string name="allow_location_permissions">Allow Location Permissions</string>
    <string name="cancel">Cancel</string>
    <string name="top_services">Services</string>
    <string name="verify_email">Verify your email</string>
    <string name="confirm_here">Confirm here</string>
    <string name="already_verified">Already verified?</string>
    <string name="delete">Delete</string>
    <string name="delete_doc_subtitle">This file will be deleted permanently and can not be reverted back.</string>
    <string name="edit_profile_img">Edit Profile Image</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="delete_profile_pictures">Delete Profile Picture</string>
    <string name="network_text2">Please check your internet problem and try again</string>
    <string name="server_unreachable">Oops! Server is unreachable</string>
</resources>