<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mLinear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/inter_regular_400"
                android:text="@string/edit_profile_img"
                android:textColor="@color/unselected"
                android:textSize="@dimen/_11sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/unselected" />


            <TextView
                android:id="@+id/upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium_500"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/upload_profile_picture"
                android:textColor="@color/map_color"
                android:textSize="@dimen/_13sdp" />


            <TextView
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium_500"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/delete_profile_pictures"
                android:textColor="@color/map_color"
                android:textSize="@dimen/_13sdp"
                android:visibility="visible" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/unselected" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_8sdp">

        <TextView
            android:id="@+id/Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular_400"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/map_color"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


</LinearLayout>



