<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_server_error" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold_600"
                android:gravity="center_horizontal"
                android:text="@string/server_unreachable"
                android:textColor="@color/textOnWhite"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/inter_regular_400"
                android:gravity="center_horizontal"
                android:text="@string/network_text2"
                android:textColor="@color/gray"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/cta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/save_background"
                android:fontFamily="@font/manrope_semibold_600"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_50sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/close"
                android:textColor="@color/textOnSolid"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>